# todo-haskell

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
src/to-do/: README.md  stack.yaml  to-do.cabal
src/to-do/app/: Main.hs
