name:                             to-do
version:                          0.1.0.0
homepage:                         https://github.com/githubuser/todo#readme
license:                          BSD3
license-file:                     LICENSE
author:                           Author name here
maintainer:                       example@example.com
copyright:                        2020 Author name here
category:                         Command Line
build-type:                       Simple
cabal-version:                    >= 1.10
extra-source-files:               README.md

executable to-do-exe
  default-language:               Haskell2010
  hs-source-dirs:                 app
  main-is:                        Main.hs
  ghc-options:                    -Werror -fwarn-incomplete-patterns
  build-depends:                  base >= 4.7 && < 5
                                , optparse-applicative
